// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodesSelection should match snapshot when no selected node 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`NodesSelection should match snapshot when selected node 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mapToProps={[Function]}
  selectedNode="http://webprotege.stanford.edu/R0jI731hv09ZcJeji1fbtY"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
